Add policy management functionality